[gd_scene load_steps=2 format=3 uid="uid://j05nykrnaag5"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_6td36"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6td36")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 10.68

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="ServerON" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 10
size_flags_stretch_ratio = 20.0
text = "You are the server.
Tell other players to use this IP:"

[node name="ServerIP" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 10
text = "192.168.1.105"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerList" type="ItemList" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3

[node name="IpLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "IP"

[node name="IpEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
placeholder_text = "127.0.0.1"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
text = "Name"

[node name="NameEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
text = "Player"
placeholder_text = "Player"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HostServer" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host Server"

[node name="JoinServer" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join Server"

[node name="StartGame" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Start Game"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/HostServer" to="." method="_on_host_server_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/JoinServer" to="." method="_on_join_server_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/StartGame" to="." method="_on_start_game_pressed"]
